--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Página de blog</h1>
     <h2>Post #1</h2>
+    <h2>Post #2</h2>
     <a href="index.html">Ir para o site principal</a>
 </body>
 </html>
